# event-graph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: gen_demo.py
event_graph/: __init__.py  cli.py  engine.py
examples/: activity_mapping.json  audit_log.csv  firewall_logs.csv  product_events.csv  threat_intel.csv  tickets.csv
security_graph/: cli.py  engine.py
tests/: test_engine.py
