[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-graph"
version = "0.1.0"
description = "Zero-copy graph investigations over firewall and threat-intel logs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["duckdb>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.11"]

[project.scripts]
security-graph = "security_graph.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "SIM"]
