[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-graph"
version = "0.1.0"
description = "Fast entity/event graph indexes over large event logs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["duckdb>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.11"]

[project.scripts]
event-graph = "event_graph.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "SIM"]
